pause button active on reload

--- a/src/choose_speed.html
+++ b/src/choose_speed.html
@@ -10,6 +10,7 @@
     <input type="number" value="400" id="speed" class="form-control"><br/>
     <input type="submit" value="Start" id="submit" class="btn btn-default"/>
     <input type="submit" value="Stop" id="stop" class="btn btn-danger" disabled="disabled"/>
+    <p id="note"><p>
     <script src="popup.js"></script>
   </body>
 </html>
